[project]
name = "api-service"
version = "1.0.0"
description = "TradingView Datafeed API Service"
requires-python = ">=3.14"
dependencies = [
    # FastAPI and ASGI
    "fastapi",
    "uvicorn",
    # Async database
    "asyncpg",
    # HTTP client (支持 HTTP/2 和代理)
    "httpx",
    # WebSocket client (自动处理 ping/pong)
    "websockets",
    # Data validation
    "pydantic",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.cov]
report = ["text", "json", "html"]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]
