[project]
name = "signal-service"
version = "1.0.0"
description = "Strategy Signal Calculation Service"
requires-python = ">=3.14"
dependencies = [
    # Async database
    "asyncpg",
    # Data validation
    "pydantic",
    "pydantic-settings",
    # Numerical computing for indicators
    "numpy",
    "pandas",
    # Technical analysis library
    "ta-lib>=0.6.8",
    # Strategy backtest dependencies (for signal calculation consistency)
    "vectorbt",
    "numba",
    # WebSocket client for receiving signals
    "websockets",
    "cachetools>=7.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.cov]
report = ["text", "json", "html"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff>=0.15.1",
]
